Use StandardCharsets
Prevents some UnsupportedEncodingException possibilities.

Change-Id: Iefa48b9c4c7843fdefb2f1be697e7c68a8b1f1ae
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>
Reviewed-on: https://git.eclipse.org/r/c/platform/eclipse.platform.ua/+/186529
Tested-by: Platform Bot <platform-bot@eclipse.org>